@@ -7,6 +7,7 @@ Date: dd Month yyyy
   Compatibility:
     - Added support for Picker Dollies
     - Added support for Better Victory Screen (#19)
+    - [Krastorio2] Added glow layer to transport tech cards
 ---------------------------------------------------------------------------------------------------
 Version: 1.8.3
 Date: 8 December 2023
